--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -639,7 +639,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.6"
                         android:background="@null"
-                        android:focusable="true"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
                         android:singleLine="true"
                         android:text=""
                         app:edittextfont="@string/raleway_bold" />
