--- a/app/src/main/res/layout/dialog_catering_order.xml
+++ b/app/src/main/res/layout/dialog_catering_order.xml
@@ -62,7 +62,7 @@
                 android:layout_marginTop="@dimen/_9sdp"
                 android:drawablePadding="@dimen/_5sdp"
                 android:gravity="center"
-                android:text="Pickup Person Name"
+                android:text="Customer Name"
                 android:textColor="@color/colorGreen"
                 app:edittextfont="Raleway-Bold.ttf" />
 
@@ -75,7 +75,7 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:background="@drawable/bgrectangle"
-                android:hint="Enter Pickup Person Name"
+                android:hint="Enter Customer Name"
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
                 app:edittextfont="Raleway-Regular.ttf" />
@@ -88,7 +88,7 @@
                 android:layout_marginTop="@dimen/_9sdp"
                 android:drawablePadding="@dimen/_5sdp"
                 android:gravity="center"
-                android:text="Pickup Person's Contact No"
+                android:text="Contact No"
                 android:textColor="@color/colorGreen"
                 app:edittextfont="Raleway-Bold.ttf" />
 
@@ -102,9 +102,9 @@
                 android:layout_marginRight="@dimen/_10sdp"
                 android:background="@drawable/bgrectangle"
                 android:hint="Enter Contact No"
+                android:inputType="phone"
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
-                android:inputType="phone"
                 app:edittextfont="Raleway-Regular.ttf" />
         </LinearLayout>
 
