--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -6,43 +6,33 @@
     android:layout_height="match_parent"
     android:background="@color/activityBackground">
 
-        <include
-            android:id="@+id/toolbar_bar2"
-            layout="@layout/toolbar" />
+    <include
+        android:id="@+id/toolbar_bar2"
+        layout="@layout/toolbar" />
 
-       <!-- <TextView
-            android:layout_width="wrap_content"
-            android:layout_gravity="right"
-            android:layout_height="wrap_content"
-            android:background="@color/transparent_full"
-            android:text="Screen No:87"
-            android:layout_alignParentRight="true"
-            android:textSize="15sp"
-            android:padding="10dp"
-            android:textColor="#000"/>
--->
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout_search"
+        style="@style/MyTabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar_bar2"
+        android:background="#fff"
+        android:elevation="0.5dp"
+        app:tabGravity="fill"
+        app:tabIndicatorHeight="2dp"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
+        app:tabTextColor="@color/edit_text_hint_color" />
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tablayout_search"
-            android:layout_width="match_parent"
-            style="@style/MyTabLayout"
-            android:layout_below="@+id/toolbar_bar2"
-            android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            android:elevation="2dp"
-            android:background="#fff"
-            app:tabSelectedTextColor="@color/colorPrimary"
-            app:tabTextColor="@color/gray"
-            app:tabMode="scrollable" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tablayout_search"
+        android:background="#fff"
+        android:overScrollMode="never"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager_search"
-            android:layout_below="@+id/tablayout_search"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#fff"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-
-    </RelativeLayout>
+</RelativeLayout>
 
