--- a/app/src/main/res/layout/fragment_customer_home.xml
+++ b/app/src/main/res/layout/fragment_customer_home.xml
@@ -14,7 +14,7 @@
            android:padding="@dimen/_5sdp"
            android:text="Screen No:81"
            android:textColor="@color/screen_no_text"
-           android:textSize="@dimen/_10sdp" />-->
+           android:textAppearance="@style/TextAppearance.AppCompat.Small" />-->
 
     <ScrollView
         android:layout_width="match_parent"
