--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAEiCntw1woMharQn6Jv4ShrJQcw-mk0dc</string>
+    <!--old-->
+    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAEiCntw1woMharQn6Jv4ShrJQcw-mk0dc</string>-->
+    <!--new-->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD8hPvdYnIsfgfLnrWvTjx9xiSfU4yhMKM</string>
 </resources>
