--- a/app/src/main/res/layout/activity_chienes.xml
+++ b/app/src/main/res/layout/activity_chienes.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activityBackground"
-    tools:context="com.yberry.dinehawaii.Customer.Fragment.ChienesFragment">
+    tools:context="com.yberry.dinehawaii.Customer.Fragment.MenuFragment">
 
 
     <android.support.v7.widget.RecyclerView
@@ -13,23 +13,12 @@
         android:layout_height="match_parent"
         android:scrollbars="none"></android.support.v7.widget.RecyclerView>
 
-    <!--  <android.support.design.widget.FloatingActionButton
-          android:id="@+id/mMessage"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentBottom="true"
-          android:layout_alignParentRight="true"
-          android:layout_margin="@dimen/_10sdp"
-          android:src="@drawable/ic_shopping_cart_black_24dp"
-          android:tooltipText="Cart"
-          app:fabSize="normal"></android.support.design.widget.FloatingActionButton>-->
-
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewCart"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/_15sdp"
         android:elevation="10dp"
         app:cardBackgroundColor="@color/colorPrimary"
@@ -58,8 +47,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
                 android:background="@drawable/cart_circle"
                 android:gravity="center"
                 android:padding="2dp"
