--- a/app/src/main/res/layout/activity_select_job_title.xml
+++ b/app/src/main/res/layout/activity_select_job_title.xml
@@ -29,199 +29,4 @@
                 android:paddingTop="@dimen/_5sdp"/>
         </LinearLayout>
     </ScrollView>
-</RelativeLayout><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF">
-
-    <include
-        android:id="@+id/toolbar_bar"
-        layout="@layout/newtoolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    &lt;!&ndash; <ScrollView
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:layout_below="@+id/toolbar_bar"
-         android:background="#FFFFFF"
-         android:scrollbars="none"
-         android:orientation="vertical">&ndash;&gt;
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar_bar"
-        android:layout_margin="@dimen/layout_height_20"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:id="@+id/layoutLinear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:background="@color/transparent_full"
-                android:padding="10dp"
-                android:text="Screen No:45 A"
-                android:textColor="#000"
-                android:textSize="15sp" />
-
-            <com.yberry.dinehawaii.customview.CustomEditText
-                android:id="@+id/btn_login_fb"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/background_hawii"
-                android:gravity="center"
-                android:hint="Search"
-                android:padding="10dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="15dp"
-                android:singleLine="true"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                app:edittextfont="Roboto-Regular.TTF" />
-
-            <com.yberry.dinehawaii.customview.CustomTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left|center"
-                android:text="Select Food Type"
-                android:textColor="#7f7e7e"
-                android:textSize="13sp"
-                app:edittextfont="Roboto-Regular.TTF" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="10dp"
-                android:background="#808080" />
-
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/card_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar_actionbar"
-            android:scrollbars="none" />
-
-        &lt;!&ndash;<CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawablePadding="10dp"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text="Pizza"
-            android:textColor="#7f7e7e"
-            android:textSize="12sp"
-            />
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawablePadding="10dp"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text="Continental"
-            android:textColor="#7f7e7e"
-
-            android:textSize="12sp"
-            />
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-
-            android:drawablePadding="10dp"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text="Chinies"
-            android:textColor="#7f7e7e"
-
-            android:textSize="12sp"
-            />
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawablePadding="10dp"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text="Sea"
-            android:textColor="#7f7e7e"
-
-            android:textSize="12sp"
-            />
-
-        <CheckBox
-            android:id="@+id/dm_msg"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawablePadding="10dp"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text="FastFood"
-            android:textColor="#7f7e7e"
-
-            android:textSize="12sp"
-          />
-
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawablePadding="10dp"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text="South Indian"
-            android:textColor="#7f7e7e"
-
-            android:textSize="12sp"
-            />
-
-        <CheckBox
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawablePadding="10dp"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text="North Indian
-"
-            android:textColor="#7f7e7e"
-
-            android:textSize="12sp"
-             />
-&ndash;&gt;
-
-    </LinearLayout>
-    &lt;!&ndash;</ScrollView>&ndash;&gt;
-</RelativeLayout>-->
+</RelativeLayout>
