--- a/app/src/main/res/layout/activity_vendor_discount_purchasing.xml
+++ b/app/src/main/res/layout/activity_vendor_discount_purchasing.xml
@@ -16,7 +16,7 @@
         android:padding="@dimen/_8sdp"
         android:text="Screen No:55"
         android:textColor="#000"
-        android:textSize="@dimen/_12sdp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:id="@+id/textView10" />
 
     <ScrollView
@@ -47,7 +47,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Description"
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -55,7 +55,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Order Qty"
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -64,7 +64,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Unit of Measure"
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -72,7 +72,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Customer Reciept Qty "
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -80,7 +80,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Driver Delivery Qty"
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -88,7 +88,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Difference"
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                 </TableRow>
@@ -101,7 +101,7 @@
                         android:layout_weight="1"
                         android:text="Buttercrunchlettuce"
 
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf"
                         android:id="@+id/customTextView11" />
 
@@ -111,7 +111,7 @@
                         android:layout_weight="1"
                         android:text="35"
 
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -119,7 +119,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="box"
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -127,7 +127,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="33 "
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -135,7 +135,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="33"
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
                     <com.yberry.dinehawaii.customview.CustomTextView
@@ -143,7 +143,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="-2"
-                        android:textSize="@dimen/_10sdp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         app:edittextfont="Raleway-Regular.ttf" />
 
 
@@ -213,7 +213,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Original Amount Due : $"
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             app:edittextfont="Raleway-Regular.ttf" />
 
                         <com.yberry.dinehawaii.customview.CustomEditText
@@ -222,7 +222,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:layout_marginLeft="@dimen/_5sdp"
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             app:edittextfont="Raleway-Regular.ttf" />
 
                         <ImageView
@@ -249,7 +249,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Adjust Amount Due : $"
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             app:edittextfont="Raleway-Regular.ttf" />
 
                         <com.yberry.dinehawaii.customview.CustomEditText
@@ -258,7 +258,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:layout_marginLeft="@dimen/_10sdp"
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             app:edittextfont="Raleway-Regular.ttf" />
 
                         <ImageView
@@ -284,7 +284,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="GE Tax : $"
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             app:edittextfont="Raleway-Regular.ttf" />
 
                         <com.yberry.dinehawaii.customview.CustomEditText
@@ -292,7 +292,7 @@
                             android:layout_width="@dimen/_50sdp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             android:layout_marginLeft="@dimen/_70sdp"
                             app:edittextfont="Raleway-Regular.ttf" />
 
@@ -319,7 +319,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Delivery Fee : $ "
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             app:edittextfont="Raleway-Regular.ttf" />
 
                         <com.yberry.dinehawaii.customview.CustomEditText
@@ -327,7 +327,7 @@
                             android:layout_width="@dimen/_50sdp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             android:layout_marginLeft="@dimen/_45sdp"
                             app:edittextfont="Raleway-Regular.ttf" />
 
@@ -355,7 +355,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Service Fee(if applicable) : $"
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             app:edittextfont="Raleway-Regular.ttf" />
 
                         <com.yberry.dinehawaii.customview.CustomEditText
@@ -364,7 +364,7 @@
                             android:layout_width="@dimen/_50sdp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textSize="@dimen/_10sdp" />
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -390,7 +390,7 @@
                             android:layout_height="wrap_content"
                             android:text="Total Due : $ "
 
-                            android:textSize="@dimen/_10sdp"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                             app:edittextfont="Raleway-Regular.ttf" />
 
                         <com.yberry.dinehawaii.customview.CustomEditText
@@ -399,7 +399,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:layout_marginLeft="@dimen/_60sdp"
-                            android:textSize="@dimen/_10sdp"/>
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -422,7 +422,7 @@
                 android:padding="@dimen/_8sdp"
                 android:text="DELIVERY CONFIRMATION DATE"
                 android:textColor="@color/green"
-                android:textSize="@dimen/_12sdp" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -436,14 +436,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Original Amount Date:"
-                    android:textSize="@dimen/_10sdp" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
                 <Button
                     android:id="@+id/adjust"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Adjust Amount Date:"
-                    android:textSize="@dimen/_10sdp" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
                 <RelativeLayout
                     android:layout_width="@dimen/_50sdp"
