--- a/app/src/main/res/layout/activity_vendor_list_by_cat.xml
+++ b/app/src/main/res/layout/activity_vendor_list_by_cat.xml
@@ -31,13 +31,11 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/tool_bar"
-        android:layout_marginBottom="?attr/actionBarSize" />
+        android:layout_below="@id/tool_bar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-
         android:layout_alignParentBottom="true"
         android:background="@color/green"
         android:visibility="gone">
