--- a/app/src/main/res/layout/activity_vendor_login_web_view.xml
+++ b/app/src/main/res/layout/activity_vendor_login_web_view.xml
@@ -31,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:visibility="gone"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:src="@drawable/logo" />
