--- a/app/src/main/res/layout/app_bar_business_navi_drawer.xml
+++ b/app/src/main/res/layout/app_bar_business_navi_drawer.xml
@@ -32,6 +32,7 @@
                 <ImageView
                     android:layout_centerVertical="true"
                     android:id="@+id/headLogo"
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/logo" />
@@ -52,34 +53,6 @@
 
             </RelativeLayout>
 
-
-            <!--<LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/headLogo"
-                    android:layout_width="@dimen/_40sdp"
-                    android:layout_height="@dimen/_40sdp"
-                    android:layout_marginRight="0dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/logo" />
-
-                <com.yberry.dinehawaii.customview.CustomTextView
-                    android:id="@+id/headText"
-                    android:layout_width="wrap_content"
-                    app:edittextfont="ROBOTO-MEDIUM.TTF"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/_3sdp"
-                    android:singleLine="true"
-                    android:text="BUSINESS HOME"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_11sdp" />
-
-            </LinearLayout>-->
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
