--- a/app/src/main/res/layout/dialog_review_reject.xml
+++ b/app/src/main/res/layout/dialog_review_reject.xml
@@ -114,7 +114,7 @@
             android:text="Submit"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="@dimen/_10sdp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:edittextfont="@string/raleway_bold" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
