--- a/app/src/main/res/layout/pop_up_dialog.xml
+++ b/app/src/main/res/layout/pop_up_dialog.xml
@@ -180,7 +180,7 @@
             android:text="Confirm"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="@dimen/_10sdp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:edittextfont="@string/raleway_bold" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
