--- a/app/src/main/res/layout/recycler_view_future.xml
+++ b/app/src/main/res/layout/recycler_view_future.xml
@@ -1,43 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/activityBackground">
+    android:background="@color/activityBackground"
+    android:orientation="vertical">
+
     <FrameLayout
         android:id="@+id/container_fragemnt"
         android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="match_parent">
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:visibility="gone"></FrameLayout>
 
     <RelativeLayout
-        android:visibility="gone"
         android:id="@+id/top_bar"
-        android:padding="@dimen/_5sdp"
-        android:background="#e2e2e2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#e2e2e2"
+        android:padding="@dimen/_5sdp"
+        android:visibility="gone">
 
 
         <LinearLayout
             android:id="@+id/spinnerLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:gravity="center_horizontal"
+            android:layout_centerVertical="true"
             android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
             android:visibility="visible">
+
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Select Date"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
-                android:textSize="@dimen/_12sdp"
-                app:edittextfont="Raleway-Regular.ttf"/>
+                android:text="Select Date"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                app:edittextfont="Raleway-Regular.ttf" />
 
             <Spinner
                 android:id="@+id/spinnerDate"
@@ -51,43 +52,41 @@
     </RelativeLayout>
 
     <com.yberry.dinehawaii.customview.CustomTextView
-        android:layout_below="@id/top_bar"
         android:id="@+id/tvNoOrders"
         android:layout_width="wrap_content"
-        android:layout_margin="@dimen/_20sdp"
         android:layout_height="wrap_content"
-        android:text="No reservations"
+        android:layout_below="@id/top_bar"
         android:layout_centerHorizontal="true"
-        android:paddingLeft="@dimen/_10sdp"
-        android:paddingRight="@dimen/_10sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingBottom="@dimen/_5sdp"
+        android:layout_margin="@dimen/_20sdp"
         android:background="@drawable/text_background"
+        android:paddingLeft="@dimen/_10sdp"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingRight="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_5sdp"
+        android:text="No reservations"
         android:visibility="gone"
-        app:edittextfont="Raleway-Regular.ttf"
-        />
+        app:edittextfont="Raleway-Regular.ttf" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_below="@id/top_bar"
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/top_bar"
         android:scrollbars="none"></android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/ic_add_white_24dp"
-        app:fabSize="mini"
-        android:visibility="gone"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
-        />
+        android:layout_margin="@dimen/_10sdp"
+        android:src="@drawable/ic_add_white_24dp"
+        android:visibility="gone"
+        app:backgroundTint="@color/colorPrimary"
+        app:fabSize="mini" />
     <!--
         <RelativeLayout
             android:layout_width="@dimen/_50sdp"
