--- a/app/src/main/res/layout/reply_dialog_review.xml
+++ b/app/src/main/res/layout/reply_dialog_review.xml
@@ -98,7 +98,7 @@
             android:text="Send"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="@dimen/_10sdp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:edittextfont="@string/raleway_bold" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
