--- a/app/src/main/res/layout/table_layout_item.xml
+++ b/app/src/main/res/layout/table_layout_item.xml
@@ -42,7 +42,7 @@
             android:text="0-0"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/_8sdp"
+            android:textAppearance="@style/TextAppearance.Compat.Notification.Time"
             android:textStyle="bold" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
