--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,64 +1,15 @@
-    <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:contentInsetLeft="0dp"
-        app:contentInsetStart="0dp"
-        android:elevation="2dp"
-        app:elevation="2dp"
-        app:contentInsetStartWithNavigation="0dp"
-        app:popupTheme="@style/AppTheme.PopupOverlay" >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_centerVertical="true"
-                android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:src="@drawable/back_arrow" />
-
-            <ImageView
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/back"
-                android:id="@+id/toolbar_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/logo"/>
-
-            <com.yberry.dinehawaii.customview.CustomTextView
-                android:id="@+id/headet_text"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/toolbar_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:singleLine="true"
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                android:textAllCaps="false"
-                android:text="Dine Hawaii"
-                app:edittextfont="@string/raleway_bold"/>
-
-        </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
-
-
-<!--
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimary"
-    android:elevation="@dimen/_3sdp"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:background="?attr/colorPrimary"
+    android:elevation="2dp"
+    app:contentInsetLeft="0dp"
+    app:contentInsetStart="0dp"
+    app:contentInsetStartWithNavigation="0dp"
+    app:elevation="2dp"
+    app:popupTheme="@style/AppTheme.PopupOverlay">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -66,35 +17,35 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_centerVertical="true"
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginRight="@dimen/_10sdp"
-            android:src="@drawable/ic_arrow_back_white_24dp" />
+            android:src="@drawable/back_arrow" />
 
         <ImageView
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/back"
             android:id="@+id/toolbar_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/logo" />
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/back"
+            android:src="@drawable/logo"
+            android:visibility="gone" />
 
         <com.yberry.dinehawaii.customview.CustomTextView
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/toolbar_logo"
             android:id="@+id/headet_text"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:textColor="@color/white"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/toolbar_logo"
             android:singleLine="true"
-            android:textSize="@dimen/_14sdp"
-            android:textAllCaps="true"
             android:text="Dine Hawaii"
-            app:edittextfont="Raleway-Regular.ttf"/>
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:edittextfont="@string/raleway_bold" />
 
     </RelativeLayout>
 </android.support.v7.widget.Toolbar>
--->
