--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="screen_no_text">#b49e9e9e</color>
     <color name="colorDivider">#b3cacaca</color>
     <color name="edit_text_hint_color">#9ea1a1a1</color>
-    <color name="activityBackground">#ededed</color>
+    <color name="activityBackground">#f2f2f2</color>
     <color name="progressDialog">#e643af6b</color>
     <color name="red">#FF0000</color>
     <color name="edit_text_color">#b1111111</color>
