--- a/app/src/main/res/layout/activity_vendor_discount_purchasing.xml
+++ b/app/src/main/res/layout/activity_vendor_discount_purchasing.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="right"
         android:background="@color/transparent_full"
         android:padding="@dimen/_8sdp"
-        android:text="Screen No:55"
+        android:text=""
         android:textColor="#000"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:id="@+id/textView10" />
