--- a/app/src/main/res/layout/dialog_takeout_order.xml
+++ b/app/src/main/res/layout/dialog_takeout_order.xml
@@ -54,12 +54,20 @@
             android:layout_below="@id/toolbar_bar"
             android:orientation="vertical">
 
+
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
+                android:text="@string/take_out_catering_instruction"
+                android:textAppearance="@style/TextAppearance.Compat.Notification.Time"
+                app:edittextfont="Raleway-Regular.ttf" />
+
             <com.yberry.dinehawaii.customview.CustomTextView
                 style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_9sdp"
                 android:drawablePadding="@dimen/_5sdp"
                 android:gravity="center"
                 android:text="Pickup Person Name"
@@ -102,9 +110,9 @@
                 android:layout_marginRight="@dimen/_10sdp"
                 android:background="@drawable/bgrectangle"
                 android:hint="Enter Contact No"
+                android:inputType="phone"
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
-                android:inputType="phone"
                 app:edittextfont="Raleway-Regular.ttf" />
         </LinearLayout>
 
@@ -121,8 +129,8 @@
             android:gravity="center"
             android:text="Confirm"
             android:textAllCaps="true"
-            android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/white"
             app:edittextfont="@string/raleway_bold" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
