--- a/app/src/main/res/layout/activity_making_reservation.xml
+++ b/app/src/main/res/layout/activity_making_reservation.xml
@@ -21,12 +21,13 @@
         android:layout_below="@+id/toolbar_bar"
         android:scrollbars="none">
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/touch_outside"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_10sdp">
+            android:layout_marginRight="@dimen/_10sdp"
+            android:orientation="vertical">
 
             <com.yberry.dinehawaii.customview.CustomTextView
                 android:id="@+id/businessName"
@@ -212,6 +213,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/l1"
                 android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <com.yberry.dinehawaii.customview.CustomCheckBox
@@ -235,6 +239,63 @@
                     android:text="Child Booster Chair"
                     android:textColor="@color/gray"
                     app:edittextfont="@string/raleway_regular" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/l1"
+                android:layout_gravity="center"
+                android:weightSum="2">
+
+                <com.yberry.dinehawaii.customview.CustomTextView
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Child High Chair"
+                    android:textColor="@color/gray"
+                    app:edittextfont="@string/raleway_regular" />
+
+                <com.yberry.dinehawaii.customview.CustomEditText
+                    android:id="@+id/etChildHigh"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_border"
+                    android:padding="@dimen/_10sdp"
+                    android:text="0"
+                    android:inputType="number"
+                    android:textColor="@color/gray"
+                    app:edittextfont="@string/raleway_regular" />
+
+                <com.yberry.dinehawaii.customview.CustomTextView
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_toRightOf="@+id/child"
+                    android:layout_weight="1"
+                    android:text="Child Booster Chair"
+                    android:textColor="@color/gray"
+                    app:edittextfont="@string/raleway_regular" />
+
+                <com.yberry.dinehawaii.customview.CustomEditText
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:id="@+id/etChildBooster"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_border"
+                    android:padding="@dimen/_10sdp"
+                    android:text="0"
+                    android:inputType="number"
+                    android:textColor="@color/gray"
+                    app:edittextfont="@string/raleway_regular" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -268,7 +329,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/llTableBook"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <com.yberry.dinehawaii.customview.CustomTextView
                     android:id="@+id/tvPreChargesText"
@@ -367,7 +429,7 @@
                     android:visibility="gone"
                     app:edittextfont="Raleway-Bold.ttf" />
             </LinearLayout>
-        </RelativeLayout>
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
